--- a/style.css
+++ b/style.css
@@ -255,3 +255,8 @@ footer a {
     color: #66666a;
     margin-right: 10px;
 }
+
+footer a:hover {
+    cursor: pointer;
+    text-decoration: underline;
+}
